syntax = "proto3";
import "alliance_dto.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message HeroTreasureHuntAlliancePointsPush {
  int32 event_id = 1;
  AllianceDto alliance = 3;
  int32 points = 4;
  google.protobuf.Timestamp updated_at = 5;
  int32 league = 6;
}
